# github-ml-project

./: README.md  docker-compose.yaml  main.py  pyproject.toml  requirements.txt
mlruns/: mlflow.db
mlruns/641170074770300010/: meta.yaml
mlruns/641170074770300010/282de3604cd34604a19125c293be0d2f/: meta.yaml
mlruns/641170074770300010/74dde7690520426eb608513e2afd633c/: meta.yaml
mlruns/641170074770300010/7a0fc87d7edb4c8e852f2227be345c66/: meta.yaml
mlruns/641170074770300010/96da756839234d5e8ccd5027e6030415/: meta.yaml
mlruns/641170074770300010/c951a583aec6435685b76b40dcb04fef/: meta.yaml
mlruns/641170074770300010/d21a91abd1e640b694956914f42352e3/: meta.yaml
mlruns/641170074770300010/d7b2b156e4344266b279a4abe8346788/: meta.yaml
mlruns/641170074770300010/dc18ff70ce7c42c0bbf382184bef53bb/: meta.yaml
mlruns/898573879405093697/: meta.yaml
mlruns/898573879405093697/e0941f094ac84cf3844ecb16e4910bee/: meta.yaml
mlruns/900885456391762619/: meta.yaml
mlruns/900885456391762619/2182b277df524ca39655697cfd8537e6/: meta.yaml
mlruns/900885456391762619/30e5949077954a728702c4f840c70220/: meta.yaml
mlruns/900885456391762619/346a511dd578460bbba3de01b611b4a0/: meta.yaml
models/: final_model_xgboost.pkl  metrics.json
src/: insert.py  take_data.py  test.py
src/api/: Dockerfile  main.py  requirements.txt
src/dashboard/: Dockerfile  app.py  requirements.txt
src/mlflow/: Dockerfile
src/scripts/: Dockerfile  acquire_data.py  consumer.py  prepare_dataset.py  producer.py
src/training/: Dockerfile  train_v2.py
(+153 files in other folders)
