[project]
name = "github-issues-ml"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "evidently>=0.7.20",
    "fastapi>=0.128.0",
    "kafka-python>=2.3.0",
    "mlflow>=3.8.1",
    "mysql-connector-python>=9.5.0",
    "pymongo>=4.16.0",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.40.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
